2007-05-27  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-createbuildenv: pbuilder seems to always finish with 'Aborting with error', fix that.
	* pbuilder-updatebuildenv: 

	the following gives 0, 1 as output:
	
	function a_called()
	{
	        echo $?
	}

	function a ()
	{
	        a_called
	}

	trap a exit

	false
	:
	a
	exit 1
	
	
	* pbuilder-buildpackage-funcs: set LOGNAME when build user is
	created inside chroot.

	* testsuite/run-test.sh: fix scripting for less diffs.

	* pdebuild.1: fix from 

	* Documentation/pbuilder-doc.xml: add documentation about
	C11screen.

	* Makefile: install the new example.

	* examples/C11screen: add new hook, which might be more useful,
	call GNU screen instead of bash.

	* pbuilder-updatebuildenv: 
	* pbuilder-createbuildenv: exit 0 at end.

	* pbuilder-buildpackage (BUILD_PID): explicitly call trap to
	untrap unexpected exit cases. Unexpected cases should exit 1, 
	expected exit cases should exit 0.

	* pbuilder-user-mode-linux: change all 'trap' functions to be postfixed with _trap

	* pbuilder-createbuildenv: 
	* pbuilder-updatebuildenv: trap sighup as well as exit.

	* pdebuild.1: document the new behavior.

	* pdebuild: create ../pkg_ver_arch.build file per default,
	matching debuild.

	* pdebuild-checkparams (BASEBUILDPLACE): use
	"${PBUILDER_BUILD_LOGFILE}" variable

	* testsuite/run-test.sh: process logs to reduce diff.

	* pbuilder-buildpackage: 
	* pbuilder-buildpackage-funcs: 
	* pbuilder-createbuildenv: 
	* pbuilder-updatebuildenv: 
	* pbuilder-user-mode-linux: trap sighup as well as exit.

2007-05-17  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: Make some references to 'base
	chroot image tar-ball' to explicitly refer to 'base.tgz'

	* pdebuild.1: 
	* pbuilder.8: 
	* pbuilder-user-mode-linux.1: update documentation.

	* pdebuild-uml-checkparams: use tee for --logfile

	* pdebuild-checkparams: 
	* pbuilder-checkparams: 