@@ -1637,14 +1637,9 @@ Pin-Priority: 950
 	<ulink url="http://pbuilder.alioth.debian.org/pbuilder-doc.html">Alioth project page for pbuilder</ulink>.
 	<ulink url="http://pbuilder.alioth.debian.org/pbuilder-doc.pdf">There is also a PDF version</ulink>.
 	The homepage for <command>pbuilder</command> is
-	<ulink url="http://www.netfort.gr.jp/~dancer/software/pbuilder.html">
-	  http://www.netfort.gr.jp/~dancer/software/pbuilder.html
-	</ulink>
-	The project has moved its hosting to alioth project since 4 Sep 2005.
-	It is available 
 	<ulink url="http://pbuilder.alioth.debian.org/">
 	  http://pbuilder.alioth.debian.org/
-	</ulink>
+	</ulink> hosted by alioth project.
       </para>
       <para>
 	Documentation is written using DocBook XML, 
