@@ -2,6 +2,7 @@ This package was debianized by Junichi Uekawa <dancer@debian.org> on
 Sat, 28 Jul 2001 17:05:50 +0900.
 
 It was downloaded from http://www.netfort.gr.jp/~dancer/software/pbuilder.html
+now from http://pbuilder.alioth.debian.org
 
 Upstream Author: 
 	 Junichi Uekawa <dancer@netfort.gr.jp> and others.
@@ -10,7 +11,7 @@ Upstream Author:
 Copyright:
 
 #   pbuilder -- personal Debian package builder
-#   Copyright (C) 2001-2006 Junichi Uekawa
+#   Copyright (C) 2001-2007 Junichi Uekawa
 #
 #   This program is free software; you can redistribute it and/or modify
 #   it under the terms of the GNU General Public License as published by
