@@ -98,10 +98,13 @@ Initial coding, and main maintenance is done by
 Junichi Uekawa <dancer@debian.org>.
 
 The homepage is available at
-.B "\%http://www.netfort.gr.jp/~dancer/software/pbuilder.html"
+.B "\%http://pbuilder.alioth.debian.org"
+
+
 .SH "FILES"
 .I "/etc/pbuilder/pbuilder-uml.conf, ${HOME}/.pbuilderrc"
 .SH "SEE ALSO"
+.BR "/usr/share/doc/pbuilder/pbuilder-doc.html" ", "
 .BR "pbuilder-user-mode-linux" "(1), "
 .BR "pbuilder" "(8), "
 .BR "pbuilderrc" "(5), "
