@@ -269,6 +269,7 @@ Software-default configuration file for pbuilder-uml.
 .B "${HOME}/.pbuilderrc"
 User-default configuration file.
 .SH "SEE ALSO"
+.BR "/usr/share/doc/pbuilder/pbuilder-doc.html" ", "
 .BR "pdebuild" "(1), "
 .BR "pbuilder" "(8), "
 .BR "rootstrap" "(1), " 
