@@ -596,9 +596,11 @@ Junichi Uekawa <dancer@debian.org>.
 User hooks code added by Dale Amon <amon@vnl.com>
 
 The homepage is available at
-.B "\%http://www.netfort.gr.jp/~dancer/software/pbuilder.html"
+.B "\%http://pbuilder.alioth.debian.org"
+
 
 .SH "SEE ALSO"
+.BR "/usr/share/doc/pbuilder/pbuilder-doc.html" ", "
 .BR "pdebuild" "(1), "
 .BR "pbuilderrc" "(5)"
 
