@@ -356,11 +356,13 @@ Junichi Uekawa <dancer@debian.org>.
 User hooks code added by Dale Amon <amon@vnl.com>
 
 The homepage is available at
-.B "\%http://www.netfort.gr.jp/~dancer/software/pbuilder.html"
+.B "\%http://pbuilder.alioth.debian.org"
+
 
 .SH "FILES"
 .I "/etc/pbuilderrc, ${HOME}/.pbuilderrc"
 .SH "SEE ALSO"
+.BR "/usr/share/doc/pbuilder/pbuilder-doc.html" ", "
 .BR "pbuilder" "(8), "
 .BR "pdebuild" "(1)"
 
