@@ -100,9 +100,11 @@ Initial coding, and main maintenance is done by
 Junichi Uekawa <dancer@debian.org>.
 
 The homepage is available at
-.B "\%http://www.netfort.gr.jp/~dancer/software/pbuilder.html"
+.B "\%http://pbuilder.alioth.debian.org"
+
 
 .SH "SEE ALSO"
+.BR "/usr/share/doc/pbuilder/pbuilder-doc.html" ", "
 .BR "pbuilder\-user\-mode\-linux" "(1), "
 .BR "pbuilderrc" "(5), "
 .BR "pbuilder\-uml.conf" "(5) "
