@@ -190,9 +190,10 @@ Initial coding and main maintenance is done by
 Junichi Uekawa <dancer@debian.org>.
 
 The homepage is
-.B "\%http://www.netfort.gr.jp/~dancer/software/pbuilder.html"
+.B "\%http://pbuilder.alioth.debian.org"
 
 .SH "SEE ALSO"
+.BR "/usr/share/doc/pbuilder/pbuilder-doc.html" ", "
 .BR "pbuilder" "(8), "
 .BR "pbuilderrc" "(5)"
 
