@@ -2,8 +2,11 @@ pbuilder (0.168) UNRELEASED; urgency=low
 
   * set LOGNAME when build user is created within chroot.
   * do not always output 'Aborting with error' on create/update
+  * fix man pages to have reference to pbuilder-doc.html, and fix home
+    page address to point to alioth.
+  * update debian/copyright
 
- -- Junichi Uekawa <dancer@debian.org>  Sun, 27 May 2007 19:54:37 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Sun, 27 May 2007 21:07:00 +0900
 
 pbuilder (0.167) unstable; urgency=low
 
