@@ -1,5 +1,12 @@
 2007-05-27  Junichi Uekawa  <dancer@debian.org>
 
+	* Documentation/pbuilder-doc.xml: remove reference to
+	netfort.gr.jp page.
+
+	* pbuilder.8, etc.: fix home page URL to point to
+	pbuilder.alioth.debian.org, not netfort.gr.jp, and add reference
+	to pbuilder-doc.html
+
 	* pbuilder-createbuildenv: pbuilder seems to always finish with 'Aborting with error', fix that.
 	* pbuilder-updatebuildenv: 
 
